--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 #spring.social.facebook.appSecret=3d3da0bcc99d64a10e67f256523fbe9e
 spring.social.twitter.app-id=IND8AsFUaC5tthnb8AtFKtGbY
 spring.social.twitter.app-secret=c3WMGeFlFohi0Vv7Wod5K4ms0RktEruiSgnJDFaOPN8l7UXbnE
-spring.datasource.url=jdbc:mysql://localhost:3306/220
+#spring.datasource.url=jdbc:mysql://localhost:3306/220
+spring.datasource.url=jdbc:mysql://localhost:3306/CMPE220
 spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
