--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-#spring.social.facebook.appId=1852748651657731
-#spring.social.facebook.appSecret=3d3da0bcc99d64a10e67f256523fbe9e
-spring.social.twitter.app-id=IND8AsFUaC5tthnb8AtFKtGbY
-spring.social.twitter.app-secret=c3WMGeFlFohi0Vv7Wod5K4ms0RktEruiSgnJDFaOPN8l7UXbnE
-#spring.datasource.url=jdbc:mysql://localhost:3306/220
+spring.social.twitter.app-id=<app-id>
+spring.social.twitter.app-secret=<app-secret>
 spring.datasource.url=jdbc:mysql://localhost:3306/CMPE220
 spring.datasource.username=root
 spring.datasource.password=root123
